pruning added. two visualization notebook created

--- a/jupyter-nb/BCPM_Implementation.ipynb
+++ b/jupyter-nb/BCPM_Implementation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -367,17 +367,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "class Model:\n",
-    "    def __init__(self, p1, alpha, a, b):\n",
+    "    def __init__(self, p1, alpha, a, b, max_k=100):\n",
     "        self.p1 = None      # prob. of change\n",
     "        self.log_p1 = None  # log prob. of change\n",
     "        self.log_p0 = None  # log prob. no change\n",
+    "        self.max_k = max_k    # maximum number of components\n",
     "        self.set_p1(p1)\n",
     "        self.prior = Potential(alpha, a, b)\n",
     "        self.m = len(alpha)\n",
@@ -443,7 +444,7 @@
     "        return m\n",
     "\n",
     "    def update(self, predict, obs):\n",
-    "        m = Message()\n",
+    "        m = Message(self.max_k)\n",
     "        p_obs = Potential.from_observation(obs, self.m, self.n)\n",
     "        for p in predict.potentials:\n",
     "            m.add_potential(p * p_obs)\n",
@@ -469,7 +470,7 @@
     "            start = length-1\n",
     "        beta = []\n",
     "        for i in range(start, start - length, -1):\n",
-    "            message = Message()\n",
+    "            message = Message(self.max_k)\n",
     "            temp = Message()\n",
     "            p_obs = Potential.from_observation(obs[:, i], self.m, self.n)\n",
     "            # change\n",
@@ -487,14 +488,17 @@
     "        beta.reverse()\n",
     "        return beta\n",
     "\n",
-    "    def filter(self, obs):\n",
-    "        alpha = self.forward(obs)[1]\n",
+    "    def filter(self, obs, return_message=False):\n",
+    "        [alpha_predict, alpha] = self.forward(obs)\n",
     "        # compile result\n",
     "        result = Result()\n",
     "        result.cpp = [message.cpp() for message in alpha]\n",
     "        result.mean = [message.mean() for message in alpha]\n",
     "        result.ll = [alpha[-1].log_likelihood()]\n",
-    "        return result\n",
+    "        if return_message:\n",
+    "            return [result, alpha_predict, alpha]\n",
+    "        else:\n",
+    "            return result\n",
     "\n",
     "    def smooth(self, obs):\n",
     "        [alpha_predict, alpha] = self.forward(obs)\n",
@@ -546,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -729,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -802,9 +806,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -816,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
